adicionando versionamento automático com Soumeh

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -23,6 +23,8 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Versioning
+        uses: Soumeh/Auto-Versioning@main
       
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
